updated title + meta description

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="/src/assets/logo.png" />
+    <meta name="description" content="ACAO is an inclusive space, catering to all students interested in Pan-Asian culture & welcoming everyone- regardless of ethnicity- into our growing community. Our club's events have attracted thousands of students, featuring regular collaborations with businesses & campus associations. We've cultivated an environment that champions diversity & belonging, open to all students eager to experience Pan-Asian culture.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ACAO</title>
+    <title>ACAO - Asian Canadian Association uOttawa</title>
   </head>
   <body>
     <div id="app"></div>
